# jobb_soeking

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7a483f218631_initial_schema.py  ec8ad5762912_add_interests_to_profile.py
cli/: apply.py  job.py  main.py  profile.py  render.py  research.py  status.py
core/: db.py
data/guidelines/: cover_letter_style.md
models/: __init__.py  application.py  document.py  job.py  profile.py  research.py
services/: generation.py  pdf.py  research.py
templates/: cover_letter.html  cv.html
